<com.ml.dayornight.theme.view.ThemeRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.ml.dayornightdome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:dayBackground="#EEEEEE"
    app:nightBackground="#000000" >

    <CheckBox
        android:id="@+id/setting_night_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@color/transparent"
        android:button="@null"
        android:drawableLeft="@drawable/checkbox_button_selector"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/day_or_night"
        android:textColor="@drawable/checkbox_text_selector"
        android:textSize="14sp" />

    <com.ml.dayornight.theme.view.ThemeTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting_night_check_box"
        android:text="@string/hello_world"
        app:dayTextColor="@android:color/black"
        app:nightTextColor="#DD00DD" />

    <com.ml.dayornight.theme.view.ThemeEditText
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_margin="10dp"
        android:hint="@string/text_hint"
        android:imeOptions="actionSearch"
        android:maxLines="2"
        app:dayBackground="@drawable/theme_edit_text_background_of_day"
        app:dayHintTextColor="#34d243"
        app:dayTextColor="@android:color/black"
        app:nightBackground="@drawable/theme_edit_text_background_of_night"
        app:nightHintTextColor="#55DDDDDD"
        app:nightTextColor="#DD00DD" />

    <com.ml.dayornight.theme.view.ThemeLinearLayout
        android:id="@+id/item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit"
        android:layout_margin="10dp"
        android:clickable="true"
        android:orientation="horizontal"
        app:dayAlpha="1.0"
        app:dayBackground="@drawable/list_item_day_bg"
        app:nightAlpha="0.5"
        app:nightBackground="@drawable/list_item_night_bg" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/poster_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp" >

            <com.ml.dayornight.theme.view.ThemeTextView
                android:id="@+id/make_title_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/item_title"
                android:textSize="14sp"
                app:dayTextColor="#404040"
                app:nightTextColor="#999999" />

            <com.ml.dayornight.theme.view.ThemeTextView
                android:id="@+id/make_autor_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="5dp"
                android:text="@string/item_dec"
                android:textSize="14sp"
                app:dayTextColor="#999999"
                app:nightTextColor="#404040" />
        </RelativeLayout>
    </com.ml.dayornight.theme.view.ThemeLinearLayout>

    <com.ml.dayornight.theme.view.ThemeButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/item"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="Login Button"
        android:textColor="#DD00DD"
        app:dayAlpha="1.0"
        app:dayBackground="@drawable/list_item_day_bg"
        app:nightAlpha="0.5"
        app:nightBackground="@drawable/list_item_night_bg" />

</com.ml.dayornight.theme.view.ThemeRelativeLayout>